network-policies/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: pod1
spec:
  containers:
    - name: container1
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
