network-policies/pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: pod2
spec:
  containers:
    - name: container2
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
