network-policies/clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-pod
spec:
  type: ClusterIP
  selector:
    app: pod1
  ports:
  - port: 1000
    targetPort: 80
    protocol: TCP
    name: http-port
