network-policies/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
spec:
  podSelector:
    matchLabels:
      app: pod1
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: pod2
      ports:
        - port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: pod2
      ports:
        - port: 8080
